<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainColor"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:prompt="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22dp" />

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <!--<Spinner-->
            <!--android:id="@+id/spinner_job"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="2dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:prompt="@string/app_name"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="22dp" />-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_job"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>